SOURCE/objects/Medication_History__c.object
<CustomObject>
    <fields>
        <fullName>Current_Compliance__c</fullName>
        <label>Current Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Compliance_explanation__c</fullName>
        <label>Current Compliance explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Use__c</fullName>
        <label>Date of Last Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <label>Dosage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Prescription__c</fullName>
        <label>Length of Prescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Medication__c</fullName>
        <label>Name of the Medication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accuneb: Proventil</fullName>
                </value>
                <value>
                    <fullName>Actos</fullName>
                </value>
                <value>
                    <fullName>Adderall XR</fullName>
                </value>
                <value>
                    <fullName>Advair</fullName>
                </value>
                <value>
                    <fullName>Aldactone</fullName>
                </value>
                <value>
                    <fullName>Allegra</fullName>
                </value>
                <value>
                    <fullName>Amaryl</fullName>
                </value>
                <value>
                    <fullName>Ambien</fullName>
                </value>
                <value>
                    <fullName>Amoxil: Trimox</fullName>
                </value>
                <value>
                    <fullName>Aristocort;Cinalog;Kenalog;Triderm</fullName>
                </value>
                <value>
                    <fullName>Ativan</fullName>
                </value>
                <value>
                    <fullName>Augmentin</fullName>
                </value>
                <value>
                    <fullName>Bactrim DS;Septra DS</fullName>
                </value>
                <value>
                    <fullName>Calan SR;Verelan PM</fullName>
                </value>
                <value>
                    <fullName>Catapres</fullName>
                </value>
                <value>
                    <fullName>Celebrex</fullName>
                </value>
                <value>
                    <fullName>Celexa</fullName>
                </value>
                <value>
                    <fullName>Cipro</fullName>
                </value>
                <value>
                    <fullName>Coreg</fullName>
                </value>
                <value>
                    <fullName>Cozaar</fullName>
                </value>
                <value>
                    <fullName>Crestor</fullName>
                </value>
                <value>
                    <fullName>Cymbalta</fullName>
                </value>
                <value>
                    <fullName>Deltasone</fullName>
                </value>
                <value>
                    <fullName>Desyrel</fullName>
                </value>
                <value>
                    <fullName>Diabeta</fullName>
                </value>
                <value>
                    <fullName>Diflucan</fullName>
                </value>
                <value>
                    <fullName>Diovan</fullName>
                </value>
                <value>
                    <fullName>Dyazide;Maxzide</fullName>
                </value>
                <value>
                    <fullName>Effexor XR</fullName>
                </value>
                <value>
                    <fullName>Elavil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Assessment</label>
        <referenceTo>PreAssesment__c</referenceTo>
        <relationshipLabel>Medication History</relationshipLabel>
        <relationshipName>Medication_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medication History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Medication History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>